# smoker-status-prediction

./: .gitignore  Dockerfile  README.md  environment.yaml  notebook.ipynb  predict-test.py  predict.py  pyproject.toml  train.py
