[tool.poetry]
name = "smoker-status-prediction"
version = "0.1.0"
description = "A machine learning project to predict a patient's smoker status."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.1.2"
numpy = "^1.26.1"
xgboost = "^2.0.1"
scikit-learn = "^1.3.2"
flask = "^3.0.0"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
awsebcli = "^3.20.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
